<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.notifications.NotificationsFragment">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/neumorphSearchCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8.5"
            app:neumorph_lightSource="rightBottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <soup.neumorphism.NeumorphImageButton
                    android:id="@+id/atMarkButton"
                    style="@style/Widget.Neumorph.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:background="#EDEDED"
                    android:scaleType="center"
                    android:src="@drawable/at_line" />

                <soup.neumorphism.NeumorphImageButton
                    android:id="@+id/hashTagButton"
                    style="@style/Widget.Neumorph.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:background="#EDEDED"
                    android:scaleType="center"
                    android:src="@drawable/hashtag" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:autofillHints="@string/search"
                    android:hint="@string/search"
                    android:singleLine="true"
                    android:textColorHint="#454545"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphImageButton
            android:id="@+id/searchButton"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="1.5"
            android:scaleType="centerInside"
            android:src="@drawable/search_line" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/flat_card"
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/titleText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="50dp"
                        android:layout_marginBottom="2dp"
                        android:layout_toStartOf="@+id/prevButton"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/prevButton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/prevButton"
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:layout_marginVertical="10dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="19dp"
                        android:layout_marginBottom="2dp"
                        android:layout_toStartOf="@+id/nextButton"
                        android:background="#EDEDED"
                        android:contentDescription="TODO"
                        android:scaleType="centerInside"
                        android:src="@drawable/arrow_ios_back_outline"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/nextButton"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/nextButton"
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginVertical="10dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="19dp"
                        android:layout_marginBottom="2dp"
                        android:background="#EDEDED"
                        android:scaleType="centerInside"
                        android:src="@drawable/arrow_ios_forward_outline"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintBottom_toTopOf="@+id/calendarGridView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="1dp"
                        android:layout_weight="1"
                        android:background="#EDEDED"
                        android:gravity="center"
                        android:text="@string/Monday"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:layout_weight="1"
                        android:background="#EDEDED"
                        android:gravity="center"
                        android:text="@string/Tuesday"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="1dp"
                        android:layout_weight="1"
                        android:background="#EDEDED"
                        android:gravity="center"
                        android:text="@string/Wednesday"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="1dp"
                        android:layout_weight="1"
                        android:background="#EDEDED"
                        android:gravity="center"
                        android:text="@string/Thursday"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="1dp"
                        android:layout_weight="1"
                        android:background="#EDEDED"
                        android:gravity="center"
                        android:text="@string/Friday"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="1dp"
                        android:layout_weight="1"
                        android:background="#EDEDED"
                        android:gravity="center"
                        android:text="@string/Saturday"
                        android:textAlignment="center"
                        android:textColor="@color/blueColor"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#EDEDED"
                        android:gravity="center"
                        android:text="@string/Sunday"
                        android:textAlignment="center"
                        android:textColor="@color/redColor"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <GridView
                    android:id="@+id/calendarGridView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:horizontalSpacing="1dp"
                    android:numColumns="7"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="1dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </soup.neumorphism.NeumorphCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5" />
    </LinearLayout>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/neumorphTweetCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout5">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/userView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="12dp"
                    android:gravity="center_horizontal"
                    android:singleLine="false"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/closeButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tweetTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:autoLink="all"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userView" />

                <soup.neumorphism.NeumorphImageButton
                    android:id="@+id/closeButton"
                    style="@style/Widget.Neumorph.Button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:scaleType="center"
                    android:src="@drawable/close_circle_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tweetTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </soup.neumorphism.NeumorphCardView>
</androidx.constraintlayout.widget.ConstraintLayout>

